--- a/team.html
+++ b/team.html
@@ -163,7 +163,7 @@
 
       <div class="team-table-item">
         
-        <div class="person-name"> Henry Chung - Management Consultant
+        <div class="person-name"> Henry Chung - Treasurer of the Board / Management Consultant
         </div>
         <div class="person-details">
         <br>BSc(Hons) CEng CITP MBCS
