--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,13 @@
     603561673
   </div>
 
- 
+  <div class="contact-title">
+    Donations
+  </div>
+
+  <div class="contact-txt">
+    To make a donation to assist our work please email enquiry@atsconsultants.com.au
+    </div>
 
 </div>
 
@@ -184,6 +190,8 @@
   </div>
   -->
 
+
+<!--
   <div class="contact-title">
     Donations
   </div>
@@ -191,7 +199,7 @@
   <div class="contact-txt">
     To make a donation to assist our work please email enquiry@atsconsultants.com.au
     </div>
-
+-->
   
 
 </div> <!-- end of contact-grid -->
