--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
   <p> </p>
 
   <div class="contact-title">
-    Contact email:
+    Contact email
   </div>
 
   <div class="contact-txt">
@@ -139,6 +139,34 @@
     Leichhardt NSW 2040
   </div>
 -->
+
+
+<div class="contact-title">
+  LinkedIn
+</div>
+
+<div class="contact-txt">
+  <a href="https://au.linkedin.com/company/atsconsulting/">
+      <button style="color:white;
+      background-color:navy;
+      font-weight: 700;
+      height: 35px;
+    width: 35px;
+    border-radius:5px;
+    cursor: pointer;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    transition:opacity: 0.3s;
+    vertical-align: centre;
+    font-family: Roboto, Arial;
+    font-size: 24px;
+    text-align: center;
+    line-height: 14px;
+    border-width: 0px;
+      ">
+       in</button>
+  </a>
+</div>
 
   <div class="contact-title">
     ABN
