--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@
      
       <section class="team-photo-container">
         <div></div>
+        <div><img class="team-photo" style="height:200px;" src="images/charity.jpg"></div>
+        <div></div>
         <div><img class="team-photo" src="images/ats bot gardens 2023-1.jpg"></div>
+        <div></div>
+        <div><img class="team-photo" style="height:70px;" src="images/ncoss.png"></div>
         <div></div>
       </section>
       
