--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
       <section class="team-photo-container">
         <div></div>
         <div><img class="team-photo" style="height:200px;margin-right:50px" src="images/charity.jpg"></div>
-        <div></div>
+        <div>&nbsp;&nbsp;</div>
         <div><img class="team-photo" src="images/ats bot gardens 2023-1.jpg"></div>
-        <div></div>
+        <div>&nbsp;&nbsp;</div>
         <div><img class="team-photo" style="height:70px; margin-left:50px" src="images/ncoss.png"></div>
         <div></div>
       </section>
