--- a/index.html
+++ b/index.html
@@ -171,7 +171,12 @@
      
       <section class="team-photo-container">
         <div></div>
+        <div>&nbsp;&nbsp;</div>
+        <div></div>
+
         <div><img class="team-photo" src="images/team-nsyd-2.jpg"></div>
+        <div></div>
+        <div>&nbsp;&nbsp;</div>
         <div></div>
       </section>
       <br>
