--- a/team.html
+++ b/team.html
@@ -172,7 +172,7 @@
           <li> 19 years in managerial positions, experienced in stakeholder management 
             and vendor management</li>
           <li> Strong leadership capability in delivering project and business outcomes</li>
-          <li>SIn-depth working experience across system development and production support</li>
+          <li> In-depth working experience across system development and production support</li>
           <li>Other industry experience include food and hospitality services</li>
         </ul>
         </div>
