--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
         <!-- <div>&nbsp;&nbsp;</div> -->
         <div><img class="team-photo" src="images/ats bot gardens 2023-1.jpg"></div>
         <!-- <div>&nbsp;&nbsp;</div> -->
-        <div class="ncoss-text1">ncoss<br><br><span class="ncoss-text2">NSW Council of Social Service</span></div>
+      
+        <div class="ncoss-text1">
+          <span class="ncoss-text2" style="color:green; font-weight: bold">Member</span><br><br>
+          ncoss
+          <br><span class="ncoss-text2">NSW Council of Social Service</span></div>
         <!-- <div></div> -->
       </section>
       
