--- a/contact.html
+++ b/contact.html
@@ -200,7 +200,7 @@
   </div>
 
   <div class="contact-txt">
-    <a href="documents/flyer.pdf">
+    <a href="documents/ATS-flyer.pdf">
       <img src="images/pdf-icon.png" style="height:25px">
     </a>
   </div>
