--- a/services.html
+++ b/services.html
@@ -162,6 +162,10 @@
                 Tracking
               </li>
 
+              <li>
+                Post-implementation reviews
+              </li>
+
             </ul>
         </div>
         
@@ -188,7 +192,7 @@
               </li>
 
               <li>
-              Decision Making
+              Decision making
               </li>
 
             </ul>
