--- a/team.html
+++ b/team.html
@@ -344,11 +344,11 @@
 
     <br>
 
-
+   <!--
     <div class="team-table-row">
 
       <div class="team-table-item">
-        <img src="images/nar.png" width=170px style="margin-left:30px">  <!-- height=215px>  -->
+        <img src="images/nar.png" width=170px style="margin-left:30px">  
       </div>
 
       <div class="team-table-item">
@@ -372,11 +372,13 @@
         </ul>
         </div>
 
-      </div> <!-- end team-table-item2 -->
+      </div> 
     
-    </div>  <!-- end team-table-row -->
+    </div>  
 
     <br>
+
+  -->
   
 
     <div class="team-table-row">
