--- a/team.html
+++ b/team.html
@@ -125,7 +125,7 @@
      <div class="team-table-row">
       
       <div class="team-table-item">
-      <img src="images/chun.jpg" width=170px style="margin-left:30px">  <!-- height=215px>  -->
+      <img src="images/chun.png" width=170px style="margin-left:30px">  <!-- height=215px>  -->
       </div>
 
       <div class="team-table-item">
