--- a/contact.html
+++ b/contact.html
@@ -200,35 +200,11 @@
   </div>
 
   <div class="contact-txt">
-    <a href="documents/ats-flyer.pdf">
+    <a href="flyer/ats-flyer.pdf">
       <img src="images/pdf-icon.png" style="height:25px">
     </a>
   </div>
 
-
-<!--
-  <div class="contact-title">
-    Introductory pack (being revised)
-  </div>
-
-  <div class="contact-txt">
-      <a href="documents/intro.pdf">
-        <img src="images/pdf-icon.png" style="height:25px">
-      </a>   
-  </div>
-  -->
-
-
-<!--
-  <div class="contact-title">
-    Donations
-  </div>
-
-  <div class="contact-txt">
-    To make a donation to assist our work please email enquiry@atsconsultants.com.au
-    </div>
--->
-  
 
 </div> <!-- end of contact-grid -->
 
