--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <section class="team-photo-container">
         <!-- <div></div> -->
         <div><a href=https://www.acnc.gov.au/charity/charities/f7aa989a-3aaf-e811-a961-000d3ad24182/profile>
-          <img class="team-photo" style="height:200px;margin-right:5px" src="images/charity.jpg">
+          <img class="team-photo" style="height:200px;margin-right:5px" src="images/charity.png">
         </a></div>
         <!-- <div>&nbsp;&nbsp;</div> -->
         <div><img class="team-photo" src="images/ats bot gardens 2023-1.jpg"></div>
