--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <link rel="stylesheet" href="styles/header.css">
 <link rel="stylesheet" href="styles/home.css">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 
   </head>
