--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         funded by donations. &nbsp;We are based in Sydney and have been operating since 2013.
       </p>
       
-      <p>Our group is composed of professionals from a range of backgrounds including senior management, consulting, business development, engineering, finance, project management and information and communication technology.
+      <p>Our consultants come from a range of backgrounds including senior management, consulting, business development, engineering, finance, project management and information and communication technology.
       </p>
       
       <p>We advise, guide, consult and review in order to promote management maturity and self-sufficiency.
