--- a/annual.html
+++ b/annual.html
@@ -117,7 +117,7 @@
 
       <section class="annual-row">   
 
-        <div class="annual-year">2024 Activites</div><div>&nbsp;</div>
+        <div class="annual-year">2024 Activities</div><div>&nbsp;</div>
 
         <div class="annual-cat">Number of consultant hours</div>
 
@@ -158,7 +158,7 @@
       
       <section class="annual-row">   
 
-        <div class="annual-year">2023 Activites</div><div>&nbsp;</div>
+        <div class="annual-year">2023 Activities</div><div>&nbsp;</div>
 
         <div class="annual-cat">Number of consultant hours</div>
 
@@ -202,7 +202,7 @@
 
       <section class="annual-row">   
 
-        <div class="annual-year">2022 Activites</div><div>&nbsp;</div>
+        <div class="annual-year">2022 Activities</div><div>&nbsp;</div>
 
         <div class="annual-cat">Number of consultant hours</div>
 
@@ -240,7 +240,7 @@
 
       <section class="annual-row">   
 
-        <div class="annual-year">2021 Activites</div><div>&nbsp;</div>
+        <div class="annual-year">2021 Activities</div><div>&nbsp;</div>
 
         <div class="annual-cat">Number of consultant hours</div>
 
@@ -281,7 +281,7 @@
 
       <section class="annual-row">   
 
-        <div class="annual-year">2020 Activites</div><div>&nbsp;</div>
+        <div class="annual-year">2020 Activities</div><div>&nbsp;</div>
 
         <div class="annual-cat">Number of consultant hours</div>
 
@@ -322,7 +322,7 @@
 
       <section class="annual-row">   
 
-        <div class="annual-year">2019 Activites</div><div>&nbsp;</div>
+        <div class="annual-year">2019 Activities</div><div>&nbsp;</div>
 
         <div class="annual-cat">Number of consultant hours</div>
 
@@ -356,7 +356,7 @@
 
       <section class="annual-row">   
 
-        <div class="annual-year">2018 Activites</div><div>&nbsp;</div>
+        <div class="annual-year">2018 Activities</div><div>&nbsp;</div>
 
         <div class="annual-cat">Number of consultant hours</div>
 
