--- a/annual.html
+++ b/annual.html
@@ -140,12 +140,12 @@
 
         <div class="annual-dtls">
           <ul>
-            <li> Conducted exit interview of a disgrunted employee in order to provide independent feedack </li>
+            <li> Conducted exit interview of a disgruntled employee in order to provide independent feedback </li>
             <li> Meetings with client CEO to review personal and organisational futures and determine plans</li>
-            <li> Assisted with fund raisning strategy</li>
-            <li> Provided independent advise on project steering committee to replace key systems</li>
+            <li> Assisted with fund raising strategy</li>
+            <li> Provided independent advice on project steering committee to replace key systems</li>
             <li> Informal "strategy on a napkin" coffee sessions with clients</li>
-            <li> Assisted with organisational redsign</li> 
+            <li> Assisted with organisational redesign</li> 
             <li> Facilitated workshop to determine one-year and three-year strategic projects</li>      
           </ul>
         </div>
@@ -176,7 +176,7 @@
             <li> ATS documentation for clients updated (new flyer)</li>
             <li> NCOSS membership</li>
             <li> Logo updated</li>
-            <li> Celebrated 10 year anniversary of ATS</li>
+            <li> Celebrated 10-year anniversary of ATS</li>
           </ul>
 
         </div>
@@ -187,12 +187,13 @@
           <ul>
             <li> Conducted exit interviews as an independent party to assist client with staff feedback </li>
             <li> Advised client setting up a new NFP</li> 
-            <li> Reviewed NPF's financial position and submitted financial sustainablility report (follow-up analysis)</li> 
+            <li> Reviewed NPF's financial position and submitted financial sustainability report (follow-up analysis)</li> 
             <li> Advised client on restructuring initiative; reviewed proposals </li>
             <li> Prepared analysis of used and unused NDIS funding for client use</li>
             <li>Submitted a report and presentation to senior staff and board risk sub-committee regarding incident management 
               processes and system status and improvement options</li>  
-            <li> Advised client on plans and approach for system changes to address process issues - followed on from interviews and recommnendations report by ATS in 2022</li>   
+            <li> Advised client on plans and approach for system changes to address process issues - 
+              followed on from interviews and recommendations report by ATS in 2022</li>   
           </ul>
         </div>
       
@@ -226,7 +227,7 @@
         <div class="annual-dtls">
           <ul>
             <li> Reviewed the business case (DCF) and assisted with its improvement for client's major new initiative</li>
-            <li> Contribuated to client's major new initiative through participation on steering committee 
+            <li> Contributed to client's major new initiative through participation on steering committee 
               and working meetings</li>
             <li> Reviewed project plan for a major project and provided project planning mentoring </li>
             <li> Interviewed key staff and board members (x18) regarding process and system issues</li>
@@ -268,7 +269,7 @@
             <li>Reviewed client initiatives success criteria</li>
             <li>Reviewed with, and advised, client on organisational structure and governance issues</li>
             <li>Member of steering committee for replacement of care provider's CMIS system</li>
-            <li>Faciliated workshop regarding replacement of the main care system or continuation of an 
+            <li>Facilitated workshop regarding replacement of the main care system or continuation of an 
               existing consortium solution</li>
                 
           </ul>
