--- a/testimonials.html
+++ b/testimonials.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      ATS Consulting
+      Client Testimonials
     </title>
 
     <meta name="description" content="Assist to Succeed consulting site">
