--- a/team.html
+++ b/team.html
@@ -258,7 +258,7 @@
     <div class="team-table-row">
 
         <div class="team-table-item"  
-          <span style="margin-top: 10px"><img src="images/peter.png" width=170px style="margin-left:30px">  
+          <span style="margin-top: 10px; margin-bottom: 10px;"><img src="images/peter.png" width=170px style="margin-left:30px">  
           </span>  
         </div>
   
