--- a/team.html
+++ b/team.html
@@ -307,6 +307,24 @@
             <div class="details-heads">Industry sectors:</div> 
             <div class="person-details">Banking, insurance, software house development, telecommunications, engineering</div>
             </div>  <!--  end of experiemce grid  -->
+
+            <!--
+            Old experience entry
+
+            <ul>
+            <li> 40 years of experience in IT, consulting, business management and 
+              program management</li>
+            <li> 30 years of management and senior management experience 
+              including CIO, program director, head of consulting and 
+              management of large (100+) IT departments and software development groups
+            </li>
+            <li>Industrial sectors include banking, insurance, software house management 
+              and telecommunications
+            </li>
+          </ul>
+
+          
+            -->
             
 
               <div class="details-heads1">LinkedIn &nbsp;&nbsp;
