--- a/annual.html
+++ b/annual.html
@@ -409,6 +409,8 @@
 
       <br><br>
 
+
+      <!--  2013-2017 -->
       <section class="annual-row">   
 
         <div class="annual-year">2013-2017 <br>
@@ -426,7 +428,7 @@
         <div class="annual-dtls">
           <ul>
             
-            <li> xxx</li>
+            <li> Set up ATS as a NFP company and registered charity</li>
           </ul>
 
         </div>
@@ -435,8 +437,8 @@
 
         <div class="annual-dtls">
           <ul>
-            <li>xxx </li>
-            <li> xxx</li>       
+            <li>Assisted NFPs with care system selection </li>
+            <li> Assisted NFPs with technical strategies</li>       
           </ul>
         </div>
       
