--- a/annual.html
+++ b/annual.html
@@ -448,9 +448,9 @@
         <div class="annual-dtls">
           2019: 198 <br>
           2018: 331 <br>
-          2017: TBA<br>
-          2016: TBA<br>
-          2015: TBA (first year of recording)
+          2017: 661<br>
+          2016: 1137<br>
+          2015: 1405 (first year of recording)
         </div>
 
         
