--- a/team.html
+++ b/team.html
@@ -665,7 +665,7 @@
         </div>
 
         <div class="person-qualifs">
-          <br>BE (Electronics & Telecommunications), PMI Certified (2001-2009), ACS certification  
+          <br>BE (Electronics & Telecommunications), PMI Certified (2001-2009), ACS certification, IEEE(Snr Member 1991- 2012)  
         </div>
 
         <div class="details-heads1">Experience includes senior roles in:</div>
@@ -673,7 +673,7 @@
             
           <div class="details-heads">Professional areas:</div> 
           <div class="person-details">IT, consulting, business management, 
-          program management</div>
+          program and project management</div>
 
           <div class="details-heads">Roles:</div> 
           <div class="person-details">Consulting System Engineer, Business Development Executive, 
