--- a/team.html
+++ b/team.html
@@ -166,7 +166,7 @@
             
           <div class="details-heads">Professional areas:</div> 
           <div class="person-details">Management consulting, business unit management, 
-            strategy, large program delivery, and transformation</div>
+            strategy development, large program delivery and transformation</div>
 
           <div class="details-heads">Roles:</div> 
           <div class="person-details">Management consultant, business unit head (300+ head count), 
@@ -177,7 +177,7 @@
             software development, telecommunications, public services</div>
 
           <div class="details-heads">Special interest:</div> 
-          <div class="person-details">"Start up" and "turn around" situation leadership</div>
+          <div class="person-details">"Start-up" and "turn-around" situation leadership</div>
 
           </div>  <!--  end of experiemce grid  -->
 
