--- a/team.html
+++ b/team.html
@@ -842,7 +842,7 @@
     <div class="team-table-row">
 
       <div class="team-table-item">
-        <img src="images/mukund.png" width=170px style="margin-left:30px; margin-top:10px; margin-bottom: 10px;">
+        <img src="images/mukund - poh dec24.jpg" width=170px style="margin-left:30px; margin-top:10px; margin-bottom: 10px;">
       </div>
 
       <div class="team-table-item">
@@ -1022,7 +1022,7 @@
     <div class="team-table-row">
 
       <div class="team-table-item">
-        <img src="images/eric.jpg" width=170px style="margin-left:30px; margin-top:10px; margin-bottom: 10px;">
+        <img src="images/eric - poh dec24.jpg" width=170px style="margin-left:30px; margin-top:10px; margin-bottom: 10px;">
       </div>
 
       <div class="team-table-item">
