--- a/team.html
+++ b/team.html
@@ -922,7 +922,7 @@
     <div class="team-table-row">
 
       <div class="team-table-item">
-        <img src="images/trina.jpg" width=170px style="margin-left:30px; margin-top:10px; margin-bottom: 10px;">
+        <img src="images/Trina-linkedin.jpg" width=170px style="margin-left:30px; margin-top:10px; margin-bottom: 10px;">
       </div>
 
       <div class="team-table-item">
