--- a/annual.html
+++ b/annual.html
@@ -460,6 +460,7 @@
           <ul>
             
             <li> Set up ATS as a NFP company and registered charity</li>
+            <li> Received grant from “AMP Tomorrow Maker”</li>
           </ul>
 
         </div>
@@ -469,9 +470,11 @@
         <div class="annual-dtls">
           <ul>
             <li> Assisted NFPs with care system selection </li>
-            <li> Assisted NFPs with technical strategies</li>
+            <li> Assisted NFPs with technical strategy plans and investment decisions</li>
+            <li> Alignment of IT and business strategic plans</li>
             <li> Membership of steering committee for replacement of client's major client system (aged, community, 
-              disability, mental health, children and family services)</li>       
+              disability, mental health, children and family services)</li>
+              <li>Assisted with disaster recovery and project rescue of a publically visible system</li>       
           </ul>
         </div>
       
