--- a/annual.html
+++ b/annual.html
@@ -81,12 +81,17 @@
             </a>
         </div>
 
-        <div>
+        <!-- Ready for client list publishing -->
+      <!-- 
+
+      <div>
           <a href="clients.html">
-          <button>Our Clients
+          <button>Clients
           </button>
         </a>
       </div>
+
+      -->
 
 
       <div>
