--- a/clients.html
+++ b/clients.html
@@ -140,11 +140,15 @@
       <section class="client-logo-container">
   
         <div> &nbsp</div>
-        <div><img class="client-logo" style="height:50px" src="images/clients/ccw.png"></div> 
+        <div><img class="client-logo" style="height:60px" src="images/clients/ccw.png"></div> 
         <div> &nbsp</div>
         
         <div> &nbsp</div>
-        <div><img class="client-logo" style="height:60px" src="images/clients/sfss.png"></div>
+        <div><img class="client-logo" style="height:90px" src="images/clients/sfss.png"></div>
+        <div> &nbsp</div>
+
+        <div> &nbsp</div>
+        <div><img class="client-logo" style="height:110px" src="images/clients/wm.png"></div>
         <div> &nbsp</div>
 
 
@@ -155,7 +159,7 @@
 
         <div><img class="client-logo" style="height:70px" src="images/clients/crews.png"></div>
         <div><img class="client-logo" style="height:50px" src="images/clients/ccdbb.png"></div>
-        <div><img class="client-logo" style="height:70px" src="images/clients/wm.png"></div>
+        
 
         <div><img class="client-logo" style="height:50px" src="images/clients/ccs.png"></div>
         <div><img class="client-logo" style="height:80px" src="images/clients/mhf.png"></div>
