--- a/clients.html
+++ b/clients.html
@@ -139,13 +139,19 @@
 
       <section class="client-logo-container">
   
-        <div> &nbsp</div>
-        <div><img class="client-logo" style="height:60px" src="images/clients/ccw.png"></div> 
-        <div> &nbsp</div>
+        <div> &nbsp </div>
+        <div><img class="client-logo" style="height:60px" src="images/clients/ccw.png"> </div> 
+        <div> &nbsp  </div>
+
+        <div> &nbsp  </div><div> &nbsp  </div><div> &nbsp  </div>
+
+        
         
         <div> &nbsp</div>
         <div><img class="client-logo" style="height:90px" src="images/clients/sfss.png"></div>
         <div> &nbsp</div>
+
+        <div> &nbsp  </div><div> &nbsp  </div><div> &nbsp  </div>
 
         <div> &nbsp</div>
         <div><img class="client-logo" style="height:110px" src="images/clients/wm.png"></div>
