--- a/annual.html
+++ b/annual.html
@@ -220,7 +220,7 @@
             <li> Informal "strategy on a napkin" coffee sessions with clients</li>
             <li> Assisted with organisational redesign</li> 
             <li> Facilitated workshop to determine one-year and three-year strategic projects</li> 
-            <li>Participated in annual planning day</li>     
+            <li>Participated in NFP's annual planning day</li>     
           </ul>
         </div>
       <br><br>
