--- a/annual.html
+++ b/annual.html
@@ -528,7 +528,7 @@
             <li> Alignment of IT and business strategic plans</li>
             <li> Membership of steering committee for replacement of client's major client system (aged, community, 
               disability, mental health, children and family services)</li>
-              <li>Assisted with disaster recovery and project rescue of a publically visible system</li>       
+              <li>Assisted with disaster recovery and project rescue of a publicly visible system</li>       
           </ul>
         </div>
       
