--- a/testimonials.html
+++ b/testimonials.html
@@ -258,7 +258,7 @@
         Lyn Ainsworth <br>
         Former Executive Director
         <br>
-        CatholicCare, Diocese of Broken Bay
+        CatholicCare Diocese of Broken Bay
         <br>
              
         <span style="color:black">January 2025</span>
