--- a/annual.html
+++ b/annual.html
@@ -195,7 +195,7 @@
         <div class="annual-cat">Number of consultant hours</div>
 
         <div class="annual-dtls">
-          266 (Jan - Oct)
+          316
         </div>
 
         
@@ -528,7 +528,13 @@
             <li> Alignment of IT and business strategic plans</li>
             <li> Membership of steering committee for replacement of client's major client system (aged, community, 
               disability, mental health, children and family services)</li>
-              <li>Assisted with disaster recovery and project rescue of a publicly visible system</li>       
+            <li>Assisted with disaster recovery and project rescue of a publicly visible system</li>
+            <li>Assisted with core systems replacement - requirements, selection, project management, 
+              integration.  Contributed on steering committeee during implementation.
+              <li> Provided project management advice to several NFPs - methodology, planning setup and tracking</li>
+              <li>Member of IT Steering Committee at various NFPs</li>
+
+            </li>       
           </ul>
         </div>
       
