--- a/clients.html
+++ b/clients.html
@@ -140,6 +140,10 @@
       <section class="client-logo-container">
   
         <div><img class="client-logo" style="height:60px" src="images/clients/Wesley-Logo.svg"></div>
+
+        <!--  ALternative if issues with svg file in some browsers
+           <div><img class="client-logo" style="height:60px" src="images/clients/Wesley-Logo.png"></div>
+          -->
         <div> &nbsp  </div>
 
         <div><img class="client-logo" style="height:60px" src="images/clients/ccw.png"> </div> 
@@ -168,7 +172,7 @@
 
         <!-- old We4sley logo
         <div> &nbsp</div>
-        <div><img class="client-logo" style="height:110px" src="images/clients/wm.png"></div>
+        <div><img class="client-logo" style="height:110px" src="images/clients/wm-old.png"></div>
         <div> &nbsp</div>
         -->
 
