--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <img class="team-photo" style="height:200px;margin-right:5px" src="images/charity.png">
         </a></div>
         <!-- <div>&nbsp;&nbsp;</div> -->
-        <div><img class="team-photo" src="images/ats bot gardens 2023-1.jpg"></div>
+        <div><img class="team-photo" src="images/ats-dec24.png"></div>
         <!-- <div>&nbsp;&nbsp;</div> -->
       
         <div class="ncoss-text1">
@@ -213,7 +213,7 @@
 
         <div>&nbsp;&nbsp;</div>
 
-        <div><img class="team-photo" src="images/team-nsyd-2.jpg"></div>
+        <div><img class="team-photo" src="images/ats bot gardens 2023-1.jpg"></div>
         <!--
         <div></div>
         -->
