--- a/annual-Jul25.html
+++ b/annual-Jul25.html
@@ -145,7 +145,8 @@
 
        <section class="annual-row">   
 
-        <div class="annual-year">2025 Activities - to end July 2025</div> <div>&nbsp;</div>
+        <div class="annual-year">2025 Activities<br>
+          &nbsp; &nbsp; &nbsp;- First Half</div> <div>&nbsp;</div>
 
         <div class="annual-cat">Number of consultant hours</div>
 
@@ -167,7 +168,7 @@
 
         <div class="annual-dtls">
           <ul>
-            <li> </li>  <!--  xxx -->
+            <!-- <li> </li> --> <!--  xxx -->
             <li> Advised a community group concerning re-establishing effective governance</li> <!-- Greenacre Community Centre -->
             <li> Assisted with the selection of a facilitator to conduct a 360 Degree review of a CEO</li> <!-- SFSS -->
             <li> Facilitated a workshop with a reconfigured business unit to reset roles, responsibilities and 
