--- a/annual-jul25.html
+++ b/annual-jul25.html
@@ -176,7 +176,9 @@
             <li> Facilitated workshops with a start-up NFP to determine strategy and 3 and 5 year goals</li> <!-- HHC -->
             <li> Engaged by an NFP client for the facilitation of their end-to-end 3-year tactical plan</li>  <!-- HHC -->
             <li> Status and options reviews with fund raising manager</li> <!-- SFSS -->
-            <li> Advised client on a strategy for improving a business unit under stress</li>  <!-- Unisson employment services -->
+            <li> Advised a business unit on performance improvements, 
+              aligning with the client’s unique value and century-long leadership 
+              in its field.  </li>  <!-- Unisson employment services -->
             <li> Advice and progress meetings with CEOs including "strategy-on-a-napkin" brainstorming</li> <!--CCW -->
           </ul>
         </div>
